<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="accountInformation"
            type="com.coldfier.peanuttest.repository.AccountInformation" />

        <variable
            name="phoneNumber"
            type="String" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="-1dp"
            tools:layout_editor_absoluteY="44dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/balance"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView35" />

            <TextView
                android:id="@+id/balanceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                tools:text="151.55"
                app:userBalance="@{accountInformation}"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
                app:layout_constraintStart_toEndOf="@+id/textView5" />

            <TextView
                android:id="@+id/currencyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:userCurrency="@{accountInformation}"
                tools:text="0"
                app:layout_constraintStart_toStartOf="@+id/balanceTextView"
                app:layout_constraintTop_toBottomOf="@+id/balanceTextView" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/currency"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/addressTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                tools:text="Address"
                app:userAddress="@{accountInformation}"
                android:textSize="14sp"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/current_trades_volume"
                app:layout_constraintStart_toStartOf="@+id/textView13"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/current_trades_count"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView19" />

            <TextView
                android:id="@+id/currentTradesCountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                tools:text="0"
                app:userCurrentTradesCount="@{accountInformation}"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView13"
                app:layout_constraintStart_toEndOf="@+id/textView13" />

            <TextView
                android:id="@+id/totalTradesCountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="0"
                app:userTotalTradesCount="@{accountInformation}"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView31"
                app:layout_constraintStart_toEndOf="@+id/textView31"
                app:layout_constraintStart_toStartOf="@+id/currentTradesVolumeTextView" />

            <TextView
                android:id="@+id/totalTradesVolumeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="0"
                app:userTotalTradesVolume="@{accountInformation}"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView33"
                app:layout_constraintStart_toEndOf="@+id/textView33"
                app:layout_constraintStart_toStartOf="@+id/totalTradesCountTextView" />

            <TextView
                android:id="@+id/currentTradesVolumeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="0"
                app:userCurrentTradesVolume="@{accountInformation}"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView15"
                app:layout_constraintStart_toEndOf="@+id/textView15"
                app:layout_constraintStart_toStartOf="@+id/currentTradesCountTextView" />

            <TextView
                android:id="@+id/equityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="222.13"
                app:userEquity="@{accountInformation}"
                app:layout_constraintStart_toStartOf="@+id/currencyTextView"
                app:layout_constraintTop_toBottomOf="@+id/currencyTextView" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/equity"
                app:layout_constraintStart_toStartOf="@+id/textView11"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/free_margin"
                app:layout_constraintStart_toStartOf="@+id/textView25"
                app:layout_constraintTop_toBottomOf="@+id/textView25" />

            <TextView
                android:id="@+id/freeMarginTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="2322.11"
                app:userFreeMargin="@{accountInformation}"
                app:layout_constraintStart_toStartOf="@+id/leverageTextView"
                app:layout_constraintTop_toBottomOf="@+id/leverageTextView" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:text="@string/open_trades_status"
                app:layout_constraintStart_toEndOf="@+id/verificationLevelTextView"
                app:layout_constraintTop_toTopOf="@+id/textView39" />

            <TextView
                android:id="@+id/isAnyOpenTradesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                tools:text="false"
                app:userAnyOpenTrades="@{accountInformation}"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView21"
                app:layout_constraintStart_toEndOf="@+id/textView21" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/swap_status"
                app:layout_constraintStart_toStartOf="@+id/textView21"
                app:layout_constraintTop_toBottomOf="@+id/textView21" />

            <TextView
                android:id="@+id/isSwapFreeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                tools:text="free/not free"
                app:userSwapStatus="@{accountInformation}"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView23"
                app:layout_constraintStart_toEndOf="@+id/textView23" />

            <TextView
                android:id="@+id/leverageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="150"
                app:userLeverage="@{accountInformation}"
                app:layout_constraintStart_toStartOf="@+id/equityTextView"
                app:layout_constraintTop_toBottomOf="@+id/equityTextView" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/leverage"
                app:layout_constraintStart_toStartOf="@+id/textView17"
                app:layout_constraintTop_toBottomOf="@+id/textView17" />

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Account name"
                app:userName="@{accountInformation}"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/phoneTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="Phone"
                app:userPhone="@{phoneNumber}"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/addressTextView"
                app:layout_constraintTop_toBottomOf="@+id/addressTextView" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/total_trades_count"
                app:layout_constraintStart_toStartOf="@+id/textView15"
                app:layout_constraintTop_toBottomOf="@+id/textView15" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/total_trades_volume"
                app:layout_constraintStart_toStartOf="@+id/textView31"
                app:layout_constraintTop_toBottomOf="@+id/textView31" />

            <TextView
                android:id="@+id/typeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                tools:text="0"
                app:userType="@{accountInformation}"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView35"
                app:layout_constraintStart_toEndOf="@+id/textView35" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/type"
                app:layout_constraintStart_toStartOf="@+id/textView37"
                app:layout_constraintTop_toBottomOf="@+id/textView37" />

            <TextView
                android:id="@+id/textView37"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/verification_level"
                app:layout_constraintStart_toStartOf="@+id/textView39"
                app:layout_constraintTop_toBottomOf="@+id/textView39" />

            <TextView
                android:id="@+id/verificationLevelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                tools:text="0"
                app:userVerificationLevel="@{accountInformation}"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView37"
                app:layout_constraintStart_toEndOf="@+id/textView37" />

            <TextView
                android:id="@+id/zipCodeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                tools:text="en"
                app:userZipCode="@{accountInformation}"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView39"
                app:layout_constraintStart_toEndOf="@+id/textView39" />

            <TextView
                android:id="@+id/textView39"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/zip_code"
                app:layout_constraintStart_toStartOf="@+id/phoneTextView"
                app:layout_constraintTop_toBottomOf="@+id/phoneTextView" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/user_icon_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_account_circle"
                tools:ignore="ImageContrastCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>