<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="quoteInfoItem"
            type="com.coldfier.peanuttest.repository.QuoteInfoItem" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/itemCardView"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:elevation="8dp"
        app:cardBackgroundColor="@color/primaryLightColor"
        app:cardCornerRadius="25dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/actualTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/primaryTextColor"
                android:textSize="16sp"
                app:actualTime="@{quoteInfoItem}"
                app:layout_constraintBaseline_toBaselineOf="@+id/pairTextView"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="TextContrastCheck"
                tools:text="21/05/2020 at 11:17" />

            <TextView
                android:id="@+id/commentTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/primaryTextColor"
                android:textSize="16sp"
                app:comment="@{quoteInfoItem}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck"
                tools:text="Trend Channel" />

            <TextView
                android:id="@+id/priceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/primaryTextColor"
                android:textSize="16sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:price="@{quoteInfoItem}"
                tools:ignore="TextContrastCheck"
                tools:text="0.27377" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/price"
                android:textColor="@color/primaryTextColor"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/textView24"
                app:layout_constraintTop_toBottomOf="@+id/textView24"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/slTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/primaryTextColor"
                android:textSize="16sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
                app:layout_constraintStart_toEndOf="@+id/textView7"
                app:layout_constraintStart_toStartOf="@+id/priceTextView"
                app:sl="@{quoteInfoItem}"
                tools:ignore="TextContrastCheck"
                tools:text="0.5554" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/tp"
                android:textColor="@color/primaryTextColor"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/tpTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/primaryTextColor"
                android:textSize="16sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
                app:layout_constraintStart_toEndOf="@+id/textView9"
                app:layout_constraintStart_toStartOf="@+id/slTextView"
                app:tp="@{quoteInfoItem}"
                tools:ignore="TextContrastCheck"
                tools:text="0.2615" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/sl"
                android:textColor="@color/primaryTextColor"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/period"
                android:textColor="@color/primaryTextColor"
                android:textSize="16sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/priceTextView"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/periodTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/primaryTextColor"
                android:textSize="16sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView12"
                app:layout_constraintStart_toEndOf="@+id/textView12"
                app:period="@{quoteInfoItem}"
                tools:ignore="TextContrastCheck"
                tools:text="H1" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/trading_system"
                android:textColor="@color/primaryTextColor"
                android:textSize="16sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/tradingSystemTextView"
                app:layout_constraintEnd_toStartOf="@+id/tradingSystemTextView"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/tradingSystemTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/primaryTextColor"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/periodTextView"
                app:layout_constraintTop_toBottomOf="@+id/periodTextView"
                app:tradingSystem="@{quoteInfoItem}"
                tools:ignore="TextContrastCheck"
                tools:text="3" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/cmd"
                android:textColor="@color/primaryTextColor"
                android:textSize="16sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/cmdTextView"
                app:layout_constraintEnd_toStartOf="@+id/cmdTextView"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/cmdTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/primaryTextColor"
                android:textSize="16sp"
                app:cmd="@{quoteInfoItem}"
                app:layout_constraintStart_toStartOf="@+id/tradingSystemTextView"
                app:layout_constraintTop_toBottomOf="@+id/tradingSystemTextView"
                tools:ignore="TextContrastCheck"
                tools:text="0" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/pair"
                android:textColor="@color/primaryTextColor"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/commentTextView"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/pairTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/primaryTextColor"
                android:textSize="16sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView24"
                app:layout_constraintStart_toEndOf="@+id/textView24"
                app:pair="@{quoteInfoItem}"
                tools:ignore="TextContrastCheck"
                tools:text="USDCHF" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>